[package]
name = "libproc"
version = "0.13.0"
description = "A library to get information about running processes - for Mac OS X and Linux"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
repository = "https://github.com/andrewdavidmackenzie/libproc-rs"
documentation = "https://andrewdavidmackenzie.github.io/libproc-rs/libproc/index.html"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
errno = "0.3.0"
libc = "^0.2.62"

[features]
default = ["macosx_10_9"]
macosx_10_7 = []
macosx_10_9 = ["macosx_10_7"]

[lib]
name = "libproc"
path = "src/lib.rs"

[[bin]]
name = "procinfo"
path = "src/procinfo.rs"

[[bin]]
name = "dmesg"
path = "src/dmesg.rs"

[build-dependencies]
bindgen = { version = "0.65.1", default-features = false, features = ["runtime"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
procfs = "0.15.0"
tempfile = "3.3.0"
