[package]
name = "libproc"
version = "0.14.5"
description = "A library to get information about running processes - for Mac OS X and Linux"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
repository = "https://github.com/andrewdavidmackenzie/libproc-rs"
documentation = "https://andrewdavidmackenzie.github.io/libproc-rs/libproc/index.html"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
errno = "0.3.0"
libc = "^0.2.62"

[features]
default = ["macosx_10_9"]
macosx_10_7 = []
macosx_10_9 = ["macosx_10_7"]

[lib]
name = "libproc"
path = "src/lib.rs"

[build-dependencies]
bindgen = { version = "0.69.0", default-features = false, features = ["runtime"] }

# NOTE: This assumes that there is a procfs compatible FS in redox and the procfs crate
# supports it. It's quite probably that neither of those two things ever happen.
# But making this assumption for now so that everything compiles at least for redox
[target.'cfg(any(target_os = "linux", target_os = "redox", target_os = "android"))'.dev-dependencies]
procfs = "0.16.0"
tempfile = "3.3.0"
