[package]
name = "libproc"
version = "0.14.9"
description = "A library to get information about running processes - for Mac OS X and Linux"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
repository = "https://github.com/andrewdavidmackenzie/libproc-rs"
documentation = "https://docs.rs/libproc/latest/libproc"
readme = "README.md"
license = "MIT"
edition = "2018"
rust-version = "1.72"

[dependencies]
errno = "0.3.0"
libc = "^0.2.62"

[lib]
name = "libproc"
path = "src/lib.rs"

[build-dependencies]
bindgen = { version = "0.70.0", default-features = false, features = ["runtime"] }

# NOTE: This assumes that there is a procfs compatible FS in redox and the procfs crate
# supports it. It's quite probably that neither of those two things ever happen.
# But making this assumption for now so that everything compiles at least for redox
[target.'cfg(any(target_os = "linux", target_os = "redox", target_os = "android"))'.dev-dependencies]
procfs = "0.16.0"
tempfile = "3.3.0"

# Build docs for macos and linux
[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]